--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   path: ^1.6.4
   path_provider: ^1.6.7
   sqflite: ^1.3.0
+  location: ^3.0.2
+  google_maps_flutter: ^0.5.27
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
