Map screen setup

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="places"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCp0kJAKNNkzjDFaDXtaI1TJI4Rzy4_QnY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
