--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,8 @@
 	<string>We need to use your location, please give us the permission</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>We need to use your location, please give us the permission</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<true />
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
